Fix overflow

--- a/_includes/styles/base.css
+++ b/_includes/styles/base.css
@@ -33,6 +33,8 @@ body {
   height: 100%;
   margin: 0;
 
+  overflow: hidden;
+
   color: var(--main-font-color);
 
   background-color: var(--color-background);
@@ -67,19 +69,17 @@ nav {
   /* box-shadow: var(--shadow--keyline); */
 }
 
-main > div {
+/* main > div {
   display: block;
   box-sizing: border-box;
-  /* min-width: 20%; */
-  overflow: hidden; /* stop background bleeding */
+  -- min-width: 20%; --
+  overflow: hidden; -- stop background bleeding --
 
   background-color: var(--color-background-tint);
   background-clip: padding-box;
   border-radius: 4px;
   box-shadow: var(--shadow--keyline);
-
-
-}
+} */
 
 nav div {
   display: flex;
