--- a/_includes/styles/components/colors.css
+++ b/_includes/styles/components/colors.css
@@ -1,7 +1,7 @@
 .flex {
   display: flex;
   /* width: 50%; */
-  padding: 0;
+  /* padding: 0; */
 }
 
 .flex > div {
