--- a/_includes/styles/modules/navigation.css
+++ b/_includes/styles/modules/navigation.css
@@ -28,6 +28,10 @@ nav header::after {
   content: '';
 }
 
+nav ul {
+  padding:0;
+}
+
 @media (max-width: 1023px) {
   nav header {
     padding-top: 30px;
